src/test/deca/context/invalid/operations_binaires_incomp.deca
// Description:
//    Uncompatible type for binary operation
//
// Resultats:
//    Uncompatible type for binary operation
//
// Historique:
//    cree le 08/01/2023

{
    boolean a=true; int b=5;
    a+b;
}
